--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Command-line application using Node.js to scrape Amazon's books page, then store the data within a .json file",
   "main": "crawler.js",
   "scripts": {
-    "test": "mocha main.js"
+    "test": "mocha main.js",
+    "start": "node crawler.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/Rod-S/Amazon-Scraper/issues"
   },
-  "homepage": "https://github.com/Rod-S/Amazon-Scraper#readme"
+  "homepage": "https://github.com/Rod-S/Amazon-Scraper#readme",
+  "dependencies": {
+    "chai": "^4.2.0",
+    "cheerio": "^1.0.0-rc.3",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
+  },
+  "devDependencies": {
+    "mocha": "^6.2.0"
+  }
 }
